--- a/p8105_hw3_zl2978.Rmd
+++ b/p8105_hw3_zl2978.Rmd
@@ -1,5 +1,73 @@
 ---
 title: "p8105_hw3_zl2978"
+author: Zhiye Lou
 output: github_document
 ---
+```{r, include=FALSE}
+library(tidyverse)
+knitr::opts_chunk$set(
+	fig.width = 6, 
+  fig.asp = .6,
+  out.width = "90%"
+)
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
+```
+##Problem 1  
+I will first load the data.
+```{r}
+library(p8105.datasets)
+data("instacart")
+```
+This dataset instacart contains `r nrow("instacart")` rows and `r ncol("instacart")` columns. There are user / order variables -- user ID, order ID, order day, and order hour. There are also item variables -- name, aisle, department, and some numeric codes.
+Then I will do some exploration of this dataset.
+```{r}
+aisleinfo_df =
+  instacart %>% 
+	count(aisle) %>% 
+	arrange(desc(n))
+```
+There are `r nrow(aisleinfo_df)` aisles, and the most items ordered from is  `r pull(aisleinfo_df %>% head(1),aisle)`.
+
+Then I will make a plot
+```{r}
+instacart %>% 
+	count(aisle) %>% 
+	filter(n > 10000) %>% 
+	mutate(
+		aisle = factor(aisle),
+		aisle = fct_reorder(aisle, n)
+	) %>% 
+	ggplot(aes(x = aisle, y = n)) + 
+	geom_point() + 
+	theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
+```
+Then I will make a table 
+```{r}
+instacart %>% 
+	filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>% 
+	group_by(aisle) %>% 
+	count(product_name) %>% 
+	mutate(rank = min_rank(desc(n))) %>% 
+	filter(rank < 4) %>% 
+	arrange(aisle, rank) %>% 
+	knitr::kable()
+```
+Then I will make a table showing the mean hour of "Apples" vs "Ice cream"
+```{r}
+instacart %>% 
+	filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) %>% 
+	group_by(product_name, order_dow) %>% 
+	summarize(mean_hour = mean(order_hour_of_day)) %>% 
+	pivot_wider(
+		names_from = order_dow,
+		values_from = mean_hour
+	) %>% 
+knitr::kable()
+```
 
