--- a/p8105_hw3_zl2978.md
+++ b/p8105_hw3_zl2978.md
@@ -154,7 +154,9 @@ acc_total_df =
 
 ``` r
 day_of_week_p = 
-  ggplot(data = acc_total_df,aes(x = day_id,y = total_of_the_day, color = day_of_the_week)) + geom_point() + geom_line()
+  ggplot(data = acc_total_df,aes(x = day_id,y = total_of_the_day, color = day_of_the_week)) + 
+  geom_point() + 
+  geom_line()
 acc_total_df %>% 
   select(-day_id) %>% 
   knitr::kable()
@@ -206,7 +208,9 @@ weekday_vs_weekend_p =
   accel_df %>% 
   group_by(week,weekday_weekend) %>% 
   summarise(mean_of_the_weekday_end = mean(activity_count)) %>% 
-  ggplot(aes(x = week,y = mean_of_the_weekday_end, color = weekday_weekend)) + geom_point() + geom_line()
+  ggplot(aes(x = week,y = mean_of_the_weekday_end, color = weekday_weekend)) + 
+  geom_point() + 
+  geom_line()
 ```
 
     ## `summarise()` regrouping output by 'week' (override with `.groups` argument)
@@ -218,7 +222,8 @@ week_trend_p =
   accel_df %>% 
   group_by(week) %>% 
   summarise(total_of_week = sum(activity_count)) %>% 
-ggplot(aes(x = week,y = total_of_week)) + geom_point() + geom_line()
+ggplot(aes(x = week,y = total_of_week)) + 
+geom_point() + geom_line()
 ```
 
     ## `summarise()` ungrouping output (override with `.groups` argument)
@@ -246,7 +251,9 @@ activity time courses for each day.
 
 ``` r
 accel_df %>% 
-  ggplot(aes(x = minutes_of_the_day, y = activity_count,color = day_of_the_week)) +    geom_line(alpha = 0.2) + stat_smooth(se = FALSE)
+  ggplot(aes(x = minutes_of_the_day, y = activity_count,color = day_of_the_week)) +   
+  geom_line(alpha = 0.2) +
+  stat_smooth(se = FALSE)
 ```
 
     ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
@@ -258,7 +265,10 @@ between 0 to 2000.
 
 ``` r
 accel_df %>% 
-  ggplot(aes(x = minutes_of_the_day, y = activity_count,color = day_of_the_week)) +  geom_line(alpha = 0.2) + stat_smooth(se = FALSE) + coord_cartesian(ylim = c(0,2000))
+  ggplot(aes(x = minutes_of_the_day, y = activity_count,color = day_of_the_week)) +  
+  geom_line(alpha = 0.2) + 
+  stat_smooth(se = FALSE) + 
+  coord_cartesian(ylim = c(0,2000))
 ```
 
     ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
@@ -280,9 +290,131 @@ library(p8105.datasets)
 data("ny_noaa")
 ```
 
+\#\#\#question 1  
 For this data set, there are 2595176 rows and 7 columns. This datasets
 has the weather station id – id. There is also a variable date, and
 weather variables – prcp (precipitation), snow, snwd (snow depth),
-tmax(maximum temperature), and tmin(minimum temperature). There is 0 row
-that does not have missing value, and the reason for these missing
-values is unknown, and thus these missing value could be problematic.
+tmax(maximum temperature), and tmin(minimum temperature). There are
+1222433 rows that do not have missing values, and the reasons for these
+missing values are unknown, and thus these missing value could be
+problematic.
+
+Then I will do some data cleaning.
+
+``` r
+nyweather_df =
+  ny_noaa %>% 
+  janitor::clean_names() %>% 
+  separate(date, into = c("year","month","day"), sep = "-") %>% 
+  mutate(
+    tmax = as.numeric(tmax)/10,
+    tmin = as.numeric(tmin)/10,
+    prcp = prcp/10) %>% 
+  rename(
+    "tmax_C" = "tmax",
+    "tmin_C" = "tmin") 
+snow_count_df =
+  nyweather_df %>% 
+  count(snow) %>% 
+    arrange(desc(n)) 
+```
+
+The most commonly observed values are 0, because for most of the days,
+there are no snow, and thus the snowfall is 0 mm. The second frequently
+value for snow is NA which suggests a large portion of missing values.
+The third and fourth frequently value for snow is 25 and 13
+respectively, and this suggests a moderate snow is very frequently when
+there is a snow.
+
+\#\#question 2 Then I will make a two-panel plot showing the average max
+temperature in January and in July.
+
+``` r
+tmax_jj_df = 
+nyweather_df %>% 
+  filter(month %in% c("01","07")) %>% 
+  mutate(month = if_else (month == "01","January","July")) %>% 
+  group_by(month,id,year) %>% 
+  summarise(mean_tmax = mean(tmax_C)) 
+```
+
+    ## `summarise()` regrouping output by 'month', 'id' (override with `.groups` argument)
+
+``` r
+ggplot(data = tmax_jj_df, aes(x = year, y = mean_tmax ,color = month, group = id)) + 
+geom_point(alpha = 0.3) +
+geom_path(alpha = 0.2) + 
+facet_grid(.~month) + 
+theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) + 
+labs(y = "mean of maximum temperature")
+```
+
+    ## Warning: Removed 7058 rows containing missing values (geom_point).
+
+    ## Warning: Removed 6007 row(s) containing missing values (geom_path).
+
+<img src="p8105_hw3_zl2978_files/figure-gfm/unnamed-chunk-16-1.png" width="90%" />
+The most obvious trend is the difference between average maximum
+temperature between January and July. Almost every year and every
+station in July has a higher average maximum temperature than that of
+January. Besides,the outliers in July are more obvious, and they tend to
+be the outliers that much lower than other values. To be more accurate
+about that, I will plot a boxplot.
+
+``` r
+ggplot(data = tmax_jj_df, aes(x = year, y = mean_tmax ,color = month)) +
+geom_boxplot() +
+facet_grid(.~month)+ 
+theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) + 
+labs(y = "mean of maximum temperature")
+```
+
+    ## Warning: Removed 7058 rows containing non-finite values (stat_boxplot).
+
+<img src="p8105_hw3_zl2978_files/figure-gfm/unnamed-chunk-17-1.png" width="90%" />
+As the boxplot shown, the outliers for January are closer to the range
+of their regular values compare to those of July, and for January, the
+outliers are tend to be higher than the range of regular values.
+
+\#\#question 3 I will first make a plot for tmax vs tmin for the full
+dataset.
+
+``` r
+min_max_p = 
+nyweather_df %>% 
+ggplot(aes(x = tmin_C, y = tmax_C)) +
+stat_bin2d(bins = 50) +
+theme(legend.position = "right")
+```
+
+Then I will plot the distribution of snowfall values greater than 0 and
+less than 100 separately by year.
+
+``` r
+snow_regular_p =
+nyweather_df %>% 
+  filter(snow > 0) %>% 
+  filter(snow < 100) %>% 
+ggplot(aes(x = year, y = snow)) +
+geom_boxplot() +
+theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
+min_max_p/snow_regular_p + 
+ggsave("P_3_2.pdf",width = 10, height = 15)
+```
+
+    ## Warning: Removed 1136276 rows containing non-finite values (stat_bin2d).
+    
+    ## Warning: Removed 1136276 rows containing non-finite values (stat_bin2d).
+
+<img src="p8105_hw3_zl2978_files/figure-gfm/unnamed-chunk-19-1.png" width="90%" />
+The bin2d plots of maximum temperature vs mimimum temperature shown the
+maximum and minimum temperatures are concentrated at (0,7) and (17,25),
+and the gradient of this plot is close to 1, and this suggest that an
+increasing in minimum temperature usually comes with an increasing in
+maximum temperature. The distribution of snow fall graph shown the
+variability of regular snow fall (between 0 and 100) is pretty small,
+and only 1998,2006, and 2010 has relatively smaller snow fall than other
+years’, and have several outliers. For other years, there are nearly no
+outliers, and the medium, 25 quantile, 75 quantile are nearly the same.
+Besides, except 2006, all the other years’ snow fall data are right
+skewed.
