--- a/p8105_hw3_zl2978.md
+++ b/p8105_hw3_zl2978.md
@@ -159,46 +159,21 @@ day_of_week_p =
   geom_line()
 acc_total_df %>% 
   select(-day_id) %>% 
+  pivot_wider(names_from = week,
+              names_prefix = "week ",
+              values_from = total_of_the_day) %>%
   knitr::kable()
 ```
 
-| week | day\_of\_the\_week | total\_of\_the\_day |
-| ---: | :----------------- | ------------------: |
-|    1 | Sunday             |           631105.00 |
-|    1 | Monday             |            78828.07 |
-|    1 | Tuesday            |           307094.24 |
-|    1 | Wednesday          |           340115.01 |
-|    1 | Thursday           |           355923.64 |
-|    1 | Friday             |           480542.62 |
-|    1 | Saturday           |           376254.00 |
-|    2 | Sunday             |           422018.00 |
-|    2 | Monday             |           295431.00 |
-|    2 | Tuesday            |           423245.00 |
-|    2 | Wednesday          |           440962.00 |
-|    2 | Thursday           |           474048.00 |
-|    2 | Friday             |           568839.00 |
-|    2 | Saturday           |           607175.00 |
-|    3 | Sunday             |           467052.00 |
-|    3 | Monday             |           685910.00 |
-|    3 | Tuesday            |           381507.00 |
-|    3 | Wednesday          |           468869.00 |
-|    3 | Thursday           |           371230.00 |
-|    3 | Friday             |           467420.00 |
-|    3 | Saturday           |           382928.00 |
-|    4 | Sunday             |           260617.00 |
-|    4 | Monday             |           409450.00 |
-|    4 | Tuesday            |           319568.00 |
-|    4 | Wednesday          |           434460.00 |
-|    4 | Thursday           |           340291.00 |
-|    4 | Friday             |           154049.00 |
-|    4 | Saturday           |             1440.00 |
-|    5 | Sunday             |           138421.00 |
-|    5 | Monday             |           389080.00 |
-|    5 | Tuesday            |           367824.00 |
-|    5 | Wednesday          |           445366.00 |
-|    5 | Thursday           |           549658.00 |
-|    5 | Friday             |           620860.00 |
-|    5 | Saturday           |             1440.00 |
+| day\_of\_the\_week |    week 1 | week 2 | week 3 | week 4 | week 5 |
+| :----------------- | --------: | -----: | -----: | -----: | -----: |
+| Sunday             | 631105.00 | 422018 | 467052 | 260617 | 138421 |
+| Monday             |  78828.07 | 295431 | 685910 | 409450 | 389080 |
+| Tuesday            | 307094.24 | 423245 | 381507 | 319568 | 367824 |
+| Wednesday          | 340115.01 | 440962 | 468869 | 434460 | 445366 |
+| Thursday           | 355923.64 | 474048 | 371230 | 340291 | 549658 |
+| Friday             | 480542.62 | 568839 | 467420 | 154049 | 620860 |
+| Saturday           | 376254.00 | 607175 | 382928 |   1440 |   1440 |
 
 I will create a plot showing the mean activity for weekdays and
 weekends.
@@ -341,11 +316,11 @@ nyweather_df %>%
     ## `summarise()` regrouping output by 'month', 'id' (override with `.groups` argument)
 
 ``` r
-ggplot(data = tmax_jj_df, aes(x = year, y = mean_tmax ,color = month, group = id)) + 
+ggplot(data = tmax_jj_df, aes(x = year, y = mean_tmax ,color = id, group = id)) + 
 geom_point(alpha = 0.3) +
 geom_path(alpha = 0.2) + 
 facet_grid(.~month) + 
-theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) + 
+theme(legend.position = "none", axis.title.x = element_blank(), axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) + 
 labs(y = "mean of maximum temperature")
 ```
 
@@ -364,14 +339,24 @@ about that, I will plot a boxplot.
 ``` r
 ggplot(data = tmax_jj_df, aes(x = year, y = mean_tmax ,color = month)) +
 geom_boxplot() +
-facet_grid(.~month)+ 
-theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) + 
-labs(y = "mean of maximum temperature")
+facet_grid(.~month) + 
+theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
 ```
 
     ## Warning: Removed 7058 rows containing non-finite values (stat_boxplot).
 
 <img src="p8105_hw3_zl2978_files/figure-gfm/unnamed-chunk-17-1.png" width="90%" />
+
+``` r
+labs(y = "mean of maximum temperature")
+```
+
+    ## $y
+    ## [1] "mean of maximum temperature"
+    ## 
+    ## attr(,"class")
+    ## [1] "labels"
+
 As the boxplot shown, the outliers for January are closer to the range
 of their regular values compare to those of July, and for January, the
 outliers are tend to be higher than the range of regular values.
